# jdksmidi-test

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  jdksmidi-MIDIMessageLogger.cpp
